# Console

./: .gitignore  README.md  Symbols.kicad_sym  z80console.kicad_prl  z80console.kicad_pro  z80console.kicad_sch
Emulator/: CMakeLists.txt  Emulator.hpp  main.cpp
Emulator/ConsoleEmulatorFrontEnd/: build.gradle.kts  settings.gradle.kts
Emulator/ConsoleEmulatorFrontEnd/composeApp/: build.gradle.kts
Emulator/ConsoleEmulatorFrontEnd/composeApp/src/desktopMain/kotlin/com/takanenstudios/console_emulator/: App.kt  AssemblerOutput.kt  EmulatorRepository.kt  EmulatorViewModel.kt  Greeting.kt  KtorClient.kt  Platform.kt  main.kt
Emulator/ConsoleEmulatorFrontEnd/gradle/: libs.versions.toml
Emulator/api/: CPUHandler.hpp  DefaultHandler.hpp  EmulatorHandler.hpp  MemoryHandler.hpp  RequestHandlerFactory.hpp
Emulator/cpu/: cpu.hpp  cpu_ops.cpp  cpu_utils.cpp
Emulator/memory/: memory.cpp  memory.hpp
Emulator/ppu/utils/: utils.cpp  utils.hpp
ROM Programmer/: main.py
ROM Programmer/DeviceProgrammer/: DeviceProgrammer.ino
Schematics/: .gitignore  Z80Console.PrjPcb  Z80Console.PrjPcbStructure  Z80Console0000.SchDoc  Z80Console0001.SchDoc  Z80Console0002.SchDoc  z80console.kicad_pro  z80console.kicad_sch
Schematics - OLD/: .gitignore  Symbols.kicad_sym  z80console.kicad_sch
Schematics/Z80Library/: .gitignore  Z80Console.LibPkg  Z80Console.PcbLib  Z80Console.SchLib
Schematics/Z80Library/dependencies/: 28C64AXX-XXXP.PcbLib  28C64AXX-XXXP.SchLib  DM7402N.PcbLib  (+17 more)
Test Programs/inc-7-seg/: main.asm
Test Programs/ram-test/: main.asm
Test Programs/testing/: main.asm
